# floaxie

./: .appveyor.yml  .codecov.yml  .gitmodules  .travis.yml  CMakeLists.txt  ERRATA.GRISU2  README.md  codecov.yml
bc/: analyze.bc  analyze.csv  check.sh  estimation.txt  input.txt  input_float.txt  onebyone.sh  onebyone_analyze.sh  onebyone_check_float.sh  onebyone_estimate.sh
cmake/: ApplyStrictCompileOptions.cmake  config.cmake.in
doc/: CMakeLists.txt  Doxyfile
example/: CMakeLists.txt  atof_main.cpp  ftoa_main.cpp  main.cpp  profile.cpp
include/: cached_power.h  diy_fp.h  grisu.h  k_comp.h  prettify.h
include/floaxie/: accuracy.h  atof.h  basic_diy_fp.h  bit_ops.h  cached_power.h  crosh.h  default_fallback.h  diy_dword.h  diy_fp.h  dtoa.h  dword_diy_fp.h  fraction.h  ftoa.h  grisu.h  huge_val.h  integer_of_size.h  k_comp.h  krosh.h  pow10.h  powers_ten_double.h  powers_ten_single.h  prettify.h  print.h  static_pow.h  take_apart.h  type_punning_cast.h  utility.h
src/: CMakeLists.txt
test/: CMakeLists.txt  atof_test.cpp  coarse_multiply.cpp  default_fallback.cpp  digit_decomp.cpp  diy_fp_conversion.cpp  diy_fp_inc_dec.cpp  diy_fp_uoflow.cpp  ftoa_len.cpp  ftoa_zero.cpp  fullcircle.cpp  fullcirclew.cpp  huge_val.cpp  inf.cpp  nan.cpp  overflow.cpp  parse_digits.cpp  power_of_two_boundaries.cpp  precise_multiply.cpp  round_up.cpp  roundtrip.cpp  string_wrappers.cpp  take_apart.cpp  underflow.cpp
